# KnowBoy

./: .clang-format  .gitignore  .gitmodules
.github/workflows/: test_roms.yml
knowboy/include/: gb_apu.h  gb_common.h  gb_cpu.h  gb_debug.h  gb_mbc.h  gb_memory.h  gb_papu.h  gb_ppu.h
knowboy/src/: gb_apu.c  gb_cpu.c  gb_cpu_priv.h  gb_debug.c  gb_mbc.c  gb_memory.c  gb_papu.c  gb_ppu.c
platform/libretro/: CMakeLists.txt  make.py  windows-toolchain.cmake
platform/libretro/include/: libretro.h  logging.h
platform/libretro/src/: libretro.c  logging.c
platform/sdl/: CMakeLists.txt  make.py
platform/sdl/cmake/: build_dependencies.cmake
platform/sdl/include/: logging.h  main.h
platform/sdl/src/: logging.c  main.c
